--- a/plugins/lgdis/app/views/issues/_view_issues_show_description_bottom.html.erb
+++ b/plugins/lgdis/app/views/issues/_view_issues_show_description_bottom.html.erb
@@ -107,7 +107,7 @@ $(function(){
 
 <fieldset class="collapsible collapsed">
 <legend onclick="toggleFieldset(this);"><%= l(:map) %></legend>
-    <div id="map_canvas" class="map_field"></div>
+    <div  style="display: none;" id="map_canvas" class="map_field"></div>
   </legend>
 </fieldset>
 
@@ -123,12 +123,12 @@ $(function(){
   // 地図表示
   google.maps.event.addDomListener(window, 'load', function() {
     var mapdiv = document.getElementById('map_canvas');
-    var lat  = <%= issue.issues_additional_data.first.latitude %>
-    var lon  = <%= issue.issues_additional_data.first.longitude %>
-    var addr = <%== "'#{issue.issues_additional_data.first.address}'" %>
+    var lat  = <%= issue.issues_additional_data.first.try(:latitude) %>
+    var lon  = <%= issue.issues_additional_data.first.try(:longitude) %>
+    var addr = <%== "'#{issue.issues_additional_data.first.try(:address)}'" %>
 
     var myOptions = {
-        zoom: 12,
+        zoom: 13,
         // TODO
         // issues_addition_datum データ(緯度・経度)を代入
         center: new google.maps.LatLng(lat, lon),
