プロトタイプ環境にて配信先情報が見れるよう修正

--- a/plugins/lgdis/assets/stylesheets/issue.css
+++ b/plugins/lgdis/assets/stylesheets/issue.css
@@ -9,10 +9,9 @@ div.xml_field td {
 p.table_border {
   width: 500px;
   border: thin solid black;
-  margin-top: 0px;
+  margin-top: -1px;
   margin-bottom: 0px;
-  padding-top: 0px;
-  padding-bottom: 0px;
+  font-size: 1.0em;
 }
 
 div.map_field {
