--- a/plugins/lgdis/app/views/issues/_view_issues_show_description_bottom.html.erb
+++ b/plugins/lgdis/app/views/issues/_view_issues_show_description_bottom.html.erb
@@ -93,6 +93,10 @@ end %>
 </legend>
 </fieldset>
 
+<% content_for :header_tags do %>
+   <%= javascript_include_tag "//maps.google.com/maps/api/js?sensor=false&language=ja" %>
+<% end %>
+
 <script>
   //<![CDATA[
   // 地図表示
