issue 追加テーブル再rename チケットのxml 表示 気象情報重複項目の削除実装

--- a/plugins/lgdis/app/views/issues/_view_issues_show_description_bottom.html.erb
+++ b/plugins/lgdis/app/views/issues/_view_issues_show_description_bottom.html.erb
@@ -102,7 +102,7 @@ end %>
   // 地図表示
   google.maps.event.addDomListener(window, 'load', function() {
     var mapdiv = document.getElementById('map_canvas');
-    <% issue_ad = issue.issues_additional_data
+    <% issue_ad = issue.issue_geographies
        lat  = MAP_VALUES['ishi_lat']
        lon  = MAP_VALUES['ishi_lon']
        addr = MAP_VALUES['ishi_addr']
