--- a/plugins/lgdis/app/views/issues/_view_issues_show_description_bottom.html.erb
+++ b/plugins/lgdis/app/views/issues/_view_issues_show_description_bottom.html.erb
@@ -100,49 +100,67 @@ end %>
 <script>
   //<![CDATA[
   // 地図表示
-  google.maps.event.addDomListener(window, 'load', function() {
-    var mapdiv = document.getElementById('map_canvas');
+  function initialize(){
     <% issue_ad = issue.issue_geographies
        lat  = MAP_VALUES['ishi_lat']
        lon  = MAP_VALUES['ishi_lon']
        addr = MAP_VALUES['ishi_addr']
+=begin
        unless issue_ad.blank?
          lat = issue_ad.first.latitude.blank? ? MAP_VALUES['ishi_lat'] : issue_ad.first.latitude
          lon = issue_ad.first.longitude.blank? ? MAP_VALUES['ishi_lon'] : issue_ad.first.longitude
          addr = issue_ad.first.address.blank? ? MAP_VALUES['ishi_addr'] : issue_ad.first.addr
        end
+=end
     %>
     var lat  = <%= lat %>;
     var lon  = <%= lon %>;
     var addr = <%== "'#{addr}'" %>;
 
+    var initPos = new google.maps.LatLng(lat, lon);
     var myOptions = {
+        center: initPos,
         zoom: 13,
-        // TODO
-        // issues_addition_datum データ(緯度・経度)を代入
-        center: new google.maps.LatLng(lat, lon),
-        mapTypeId: google.maps.MapTypeId.ROADMAP,
-        scaleControl: true,
+        mapTypeId: google.maps.MapTypeId.ROADMAP
+       // scaleControl: true
+       // noClear: true
     };
+    var mapdiv = document.getElementById('map_canvas');
     var map = new google.maps.Map(mapdiv, myOptions);
+
     // マーカ
     var marker = new google.maps.Marker({
       // TODO
-      // issues_addition_datum データ)(緯度・経度)を代入
       position: new google.maps.LatLng(lat, lon),
       map: map
     });
-
     // ポップアップ
     var infowindow = new google.maps.InfoWindow({
       // TODO
-      // issues_addition_datum データ(住所)を代入
       content: addr
     });
-    google.maps.event.addListener(marker, 'click', function() {
-      infowindow.open(map,marker);
-    });
-  });
+
+    // TODO
+    // issue_geographies テーブルより取得
+    var points = [
+      new google.maps.LatLng(35.003355,135.742607),
+      new google.maps.LatLng(35.009014,135.770159),
+      new google.maps.LatLng(34.98604,135.779815),
+      new google.maps.LatLng(34.963834,135.755997),
+      new google.maps.LatLng(35.003355,135.742607)
+    ];
+    var polygonOptions = {
+      paths: points,
+      strokeWeight: 5,
+      strokeColor: "#0000ff",
+      strokeOpacity: 1.5,
+      fillColor: "#008000",
+      fillOpacity: 1.5,
+      map : map
+    };
+    var poly = new google.maps.Polygon(polygonOptions);
+  }
+  google.maps.event.addDomListener(window, 'load', initialize);
   //]]>
 </script>
 <% end %>
