--- a/plugins/lgdis/app/views/issues/_view_issues_form_details_bottom.html.erb
+++ b/plugins/lgdis/app/views/issues/_view_issues_form_details_bottom.html.erb
@@ -1,12 +1,11 @@
 <% if issue.new_record? %>
 <%= javascript_tag do %>
   $(function(){
-    <% CF_DEFAULT_VALUES.each do |cf_id, vals|
-        next unless issue.editable_custom_field_values.index{|ecf| ecf.custom_field_id == cf_id}
-        cf_field_id = "issue_custom_field_values_#{cf_id}" %>
-    <% if vals = "ALL" %>
-    $("#<%= cf_field_id %> option").prop("selected",true);
-    <% end %>
+    <% issue.editable_custom_field_values.each do |cfv|
+        cf = cfv.custom_field
+        next unless cf.is_default_all_selected == true
+        next unless cfv.value[0].nil? %>
+    $("#<%= "issue_custom_field_values_#{cf.id}" %> option").prop("selected",true);
     <% end -%>
   });
 <% end %>
