--- a/plugins/lgdis/app/views/issues/_view_issues_form_details_bottom.html.erb
+++ b/plugins/lgdis/app/views/issues/_view_issues_form_details_bottom.html.erb
@@ -10,3 +10,28 @@
   });
 <% end %>
 <% end %>
+
+<% content_for :header_tags do %>
+  <%= javascript_include_tag "http://maps.googleapis.com/maps/api/js?sensor=false" %>
+  <%= javascript_include_tag "gmap", :plugin => "lgdis" %>
+  <%= stylesheet_link_tag 'issue', :plugin => 'lgdis' %>
+<% end %>
+<%= javascript_tag do %>
+  $(function(){
+    <% cf_values = issue.editable_custom_field_values.select{|cf| cf.custom_field.field_format=='address'} %>
+    <% cf_values.each do |cf_value|
+        cf_field_id = "issue_custom_field_values_#{cf_value.custom_field.id}" %>
+    $("#<%= cf_field_id %>2").after("\
+      <span id='<%= cf_field_id %>_map_show_link'>\
+        <a href='#' onclick=\"toggleClickableMap('<%= cf_field_id %>_map','<%= cf_field_id %>0'); return false;\">\
+          <img class=\"ui-datepicker-trigger\" src=\"/images/changeset.png\" alt=\"<%= l(:button_map_show) %>\"></a>\
+      </span>\
+      <span id='<%= cf_field_id %>_map_hide_link' style='display: none'>\
+        <a href='#' onclick=\"clearMap('<%= cf_field_id %>_map'); return false;\">\
+          <img class=\"ui-datepicker-trigger\" src=\"/images/cancel.png\" alt=\"<%= l(:button_map_hide) %>\"></a>\
+      </span>\
+      <div id='<%= cf_field_id %>_map' class='input_map' style='display: none'></div>\
+    ");
+    <% end -%>
+  });
+<% end %>
