手動配信処理 送信した内容を注記に登録し、アーカイブ出来るよう修正。配信内容表示処理を修正。

--- a/plugins/lgdis/app/views/deliver_issues/index.html.erb
+++ b/plugins/lgdis/app/views/deliver_issues/index.html.erb
@@ -1,6 +1,7 @@
 <%= form_tag("/deliver_issues/allow_delivery") do %>
-<%= hidden_field_tag :issue_id, @issue.id %>
-<%= hidden_field_tag 'id', @delivery_history.id %>
+<%= hidden_field_tag 'id',        @delivery_history.id %>
+<%= hidden_field_tag :summary,    @summary %>
+<%= hidden_field_tag :issue_id,   @issue.id %>
 <%= hidden_field_tag :project_id, @issue.project.identifier %>
 <table class="dellist">
   <thead>
@@ -15,15 +16,9 @@
       </th>
     </tr>
     <tr>
-      <th style="text-align: left">配信内容 1 :</th>
+      <th style="text-align: left">配信内容</th>
       <th style="text-align: left">
-      <%= @issue.description %>
-      </th>
-    </tr>
-    <tr>
-      <th style="text-align: left">配信内容 2 :</th>
-      <th style="text-align: left">
-      <%= @issue.custom_field_value_by_id(DST_LIST['content_delivery']['summary']) %>
+      <%= @summary %>
       </th>
     </tr>
     <tr>
