避難所開設機能　[地区名]項目の実装

--- a/plugins/lgdis/app/views/shelters/_list.html.erb
+++ b/plugins/lgdis/app/views/shelters/_list.html.erb
@@ -30,7 +30,7 @@
           </a>
         </td>
         <td style="text-align: center;"><%= @shelter_const["shelter_type"][shelter.shelter_type] %></td>
-        <td style="text-align: center;">地区名</td>
+        <td style="text-align: center;"><%= @area[shelter.area] %></td>
         <td style="text-align: center;"><%= shelter.phone %></td>
         <td style="text-align: center;"><%= shelter.manager_name %></td>
         <td style="text-align: center;">
