--- a/plugins/lgdis/app/views/shelters/_form.html.erb
+++ b/plugins/lgdis/app/views/shelters/_form.html.erb
@@ -20,6 +20,11 @@
     <%= f.text_field key,:size=>'100',:disabled => @disabled %>
   <% end %>
   
+  <%= field_for :area, :required => true do |key, label| %>
+    <%= label_tag{label} %>
+    <%= f.select key, options_for_select(@area.invert, f.object.send(key)),{:include_blank => true},:disabled => @disabled %>
+  <% end %>
+  
   <%= field_for :address, :required => true do |key, label| %>
     <%= label_tag{label} %>
     <%= f.text_field key,:size=>'100',:disabled => @disabled %>
