課題管理機能のissues.xml_control_cause、issues.xml_control_applyの表示にcacheから名称を取得

--- a/plugins/lgdis/app/views/issues/_view_issues_show_description_bottom.html.erb
+++ b/plugins/lgdis/app/views/issues/_view_issues_show_description_bottom.html.erb
@@ -13,10 +13,10 @@
     rows.left l(:field_xml_control_publishingoffice), h(issue.xml_control_publishingoffice), :class => 'xml_control_publishingoffice'
   end
   if issue.xml_control_cause
-    rows.right l(:field_xml_control_cause), h(issue.xml_control_cause), :class => 'xml_control_cause'
+    rows.right l(:field_xml_control_cause), h(@waring_const_cause[issue.xml_control_cause]), :class => 'xml_control_cause'
   end
   if issue.xml_control_apply
-    rows.left l(:field_xml_control_apply), h(issue.xml_control_apply), :class => 'xml_control_apply'
+    rows.left l(:field_xml_control_apply), h(@waring_const_apply[issue.xml_control_apply]), :class => 'xml_control_apply'
   end
   if issue.xml_head_title
     rows.right l(:field_xml_head_title), h(issue.xml_head_title), :class => 'xml_head_title'
