--- a/plugins/lgdis/app/views/settings/_external_auth.html.erb
+++ b/plugins/lgdis/app/views/settings/_external_auth.html.erb
@@ -1,5 +1,5 @@
 <%= stylesheet_link_tag params[:controller], :plugin => 'lgdis' %>
 <p>
-  <%= check_box_tag("settings[enable_external_auth]", true, @settings[:enable_external_auth]) %>
+  <%= check_box_tag("settings[enable_external_auth]", true, (@settings.present? && @settings[:enable_external_auth])) %>
   <label><%= l('external_auth.field_enable') %>:</label>
 </p>
