配信管理 xml生成処理を修正 配信履歴表示処理を修正

--- a/plugins/lgdis/app/views/deliver_issues/index.html.erb
+++ b/plugins/lgdis/app/views/deliver_issues/index.html.erb
@@ -15,9 +15,9 @@
       </th>
     </tr>
     <tr>
-      <th style="text-align: left">配信内容</th>
+      <th style="text-align: left">配信内容 :</th>
       <th style="text-align: left">
-        <%= @summary %>
+        <%= text_area_tag 'contents', @summary, {:readonly=>true,:size => "100x30"} %>
       </th>
     </tr>
     <tr>
